--- a/movimientos.html
+++ b/movimientos.html
@@ -21,7 +21,7 @@
             <div class="contenedorInfoGrupo">
                 <div>INTEGRANTE 1</div>
                 <div>INTEGRANTE 2</div>
-                <div>INTEGRANTE 3</div>
+                <div>Carlos Tene</div>
             </div>
         </div>
         <div class="contenido" id="divCuentas">
@@ -88,11 +88,11 @@
                 <div class="contenedorTexto">
                     <div class="etiquetaTexto">CAMPO 1</div>
                     <div class="cajaTexto">
-                        <input type="text" class="caja" />
+                        <input type="text" class="caja" id="txtC" />
                     </div>
                 </div>
                 <div class="contenedorAcciones">
-                    <input type="button" value="BUSCAR" />                    
+                    <input type="button" value="BUSCAR" onclick="buscarM();"/>                    
                 </div>
                 <div id="tablaMovimientos">
                     TABLA
