--- a/transacciones.html
+++ b/transacciones.html
@@ -20,7 +20,7 @@
             </div>
             <div class="contenedorInfoGrupo">
                 <div>INTEGRANTE 1</div>
-                <div>INTEGRANTE 2</div>
+                <div>Edison Jacome</div>
                 <div>INTEGRANTE 3</div>
             </div>
         </div>
