--- a/movimientos.html
+++ b/movimientos.html
@@ -21,7 +21,7 @@
             <div class="contenedorInfoGrupo">
                 <div>INTEGRANTE 1</div>
                 <div>INTEGRANTE 2</div>
-                <div>Carlos Tene</div>
+                <div>INTEGRANTE 3</div>
             </div>
         </div>
         <div class="contenido" id="divCuentas">
